Bättre lineheight, lite spacing-fixar

--- a/wwwroot/css/footer.css
+++ b/wwwroot/css/footer.css
@@ -1,4 +1,5 @@
 ﻿footer {
+    margin-top: 5rem;
     padding-top: 60px;
     padding-bottom: 60px;
 }
